fix activestylein css for desktop

--- a/src/App.css
+++ b/src/App.css
@@ -468,13 +468,13 @@ main {
     width: 24px;
     height: 24px;
     border-radius: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-image: linear-gradient(
+    background-image: url('./images/icon.svg'),linear-gradient(
       rgba(85, 221, 255, 1) 0%,
       rgba(192, 88, 243, 1) 100%
     );
+    background-repeat: no-repeat;
+    background-position: center;
+    cursor: pointer;
   }
 
   main {
